--- a/run_backtester.ipynb
+++ b/run_backtester.ipynb
@@ -2,68 +2,311 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                ts_recv  instrument_id  bid_px_00  ask_px_00  \\\n",
-      "0        2024-01-02T14:30:02.402838204Z      587228771       27.0      27.70   \n",
-      "1        2024-01-02T14:30:02.402844171Z      587211744        1.6       1.75   \n",
-      "2        2024-01-02T14:30:02.402848382Z      587211728        4.1       4.40   \n",
-      "3        2024-01-02T14:30:02.410507796Z      587246038      121.1     123.70   \n",
-      "4        2024-01-02T14:30:02.410507796Z      587237433       42.7      43.40   \n",
-      "...                                 ...            ...        ...        ...   \n",
-      "1639247  2024-03-28T20:37:30.943251679Z     1174421216      118.5     120.20   \n",
-      "1639248  2024-03-28T20:37:30.943337040Z     1174421216      118.5     120.20   \n",
-      "1639249  2024-03-28T20:37:31.631254111Z     1174440576      118.5     120.00   \n",
-      "1639250  2024-03-28T20:38:02.001005213Z     1174440576      118.5     120.00   \n",
-      "1639251  2024-03-28T20:51:14.059720971Z     1174424859        1.5       1.70   \n",
-      "\n",
-      "         bid_sz_00  ask_sz_00                 symbol expiration option_type  \\\n",
-      "0              174        155  SPX   240119P04700000 2024-01-19           P   \n",
-      "1              755       1981  SPX   240119P04300000 2024-01-19           P   \n",
-      "2             1566       1125  SPX   240119P04500000 2024-01-19           P   \n",
-      "3               15         15  SPX   240216P04850000 2024-02-16           P   \n",
-      "4               75        120  SPX   240216P04650000 2024-02-16           P   \n",
-      "...            ...        ...                    ...        ...         ...   \n",
-      "1639247         30         30  SPX   240621P05305000 2024-06-21           P   \n",
-      "1639248         30         30  SPX   240621P05305000 2024-06-21           P   \n",
-      "1639249         25         15  SPX   240621C05305000 2024-06-21           C   \n",
-      "1639250         25         15  SPX   240621C05305000 2024-06-21           C   \n",
-      "1639251        346        888  SPX   240419P04475000 2024-04-19           P   \n",
-      "\n",
-      "         strike_price         day  \n",
-      "0              4700.0  2024-01-02  \n",
-      "1              4300.0  2024-01-02  \n",
-      "2              4500.0  2024-01-02  \n",
-      "3              4850.0  2024-01-02  \n",
-      "4              4650.0  2024-01-02  \n",
-      "...               ...         ...  \n",
-      "1639247        5305.0  2024-03-28  \n",
-      "1639248        5305.0  2024-03-28  \n",
-      "1639249        5305.0  2024-03-28  \n",
-      "1639250        5305.0  2024-03-28  \n",
-      "1639251        4475.0  2024-03-28  \n",
-      "\n",
-      "[1639252 rows x 11 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts_recv</th>\n",
+       "      <th>instrument_id</th>\n",
+       "      <th>bid_px_00</th>\n",
+       "      <th>ask_px_00</th>\n",
+       "      <th>bid_sz_00</th>\n",
+       "      <th>ask_sz_00</th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>expiration</th>\n",
+       "      <th>option_type</th>\n",
+       "      <th>strike_price</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-01-02 14:30:02.402838204+00:00</td>\n",
+       "      <td>587228771</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>27.70</td>\n",
+       "      <td>174</td>\n",
+       "      <td>155</td>\n",
+       "      <td>SPX   240119P04700000</td>\n",
+       "      <td>2024-01-19</td>\n",
+       "      <td>P</td>\n",
+       "      <td>4700.0</td>\n",
+       "      <td>2024-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-01-02 14:30:02.402844171+00:00</td>\n",
+       "      <td>587211744</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>755</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>SPX   240119P04300000</td>\n",
+       "      <td>2024-01-19</td>\n",
+       "      <td>P</td>\n",
+       "      <td>4300.0</td>\n",
+       "      <td>2024-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-01-02 14:30:02.402848382+00:00</td>\n",
+       "      <td>587211728</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>4.40</td>\n",
+       "      <td>1566</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>SPX   240119P04500000</td>\n",
+       "      <td>2024-01-19</td>\n",
+       "      <td>P</td>\n",
+       "      <td>4500.0</td>\n",
+       "      <td>2024-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-01-02 14:30:02.410507796+00:00</td>\n",
+       "      <td>587246038</td>\n",
+       "      <td>121.1</td>\n",
+       "      <td>123.70</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>SPX   240216P04850000</td>\n",
+       "      <td>2024-02-16</td>\n",
+       "      <td>P</td>\n",
+       "      <td>4850.0</td>\n",
+       "      <td>2024-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-01-02 14:30:02.410507796+00:00</td>\n",
+       "      <td>587237433</td>\n",
+       "      <td>42.7</td>\n",
+       "      <td>43.40</td>\n",
+       "      <td>75</td>\n",
+       "      <td>120</td>\n",
+       "      <td>SPX   240216P04650000</td>\n",
+       "      <td>2024-02-16</td>\n",
+       "      <td>P</td>\n",
+       "      <td>4650.0</td>\n",
+       "      <td>2024-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1639247</th>\n",
+       "      <td>2024-03-28 20:37:30.943251679+00:00</td>\n",
+       "      <td>1174421216</td>\n",
+       "      <td>118.5</td>\n",
+       "      <td>120.20</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>SPX   240621P05305000</td>\n",
+       "      <td>2024-06-21</td>\n",
+       "      <td>P</td>\n",
+       "      <td>5305.0</td>\n",
+       "      <td>2024-03-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1639248</th>\n",
+       "      <td>2024-03-28 20:37:30.943337040+00:00</td>\n",
+       "      <td>1174421216</td>\n",
+       "      <td>118.5</td>\n",
+       "      <td>120.20</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>SPX   240621P05305000</td>\n",
+       "      <td>2024-06-21</td>\n",
+       "      <td>P</td>\n",
+       "      <td>5305.0</td>\n",
+       "      <td>2024-03-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1639249</th>\n",
+       "      <td>2024-03-28 20:37:31.631254111+00:00</td>\n",
+       "      <td>1174440576</td>\n",
+       "      <td>118.5</td>\n",
+       "      <td>120.00</td>\n",
+       "      <td>25</td>\n",
+       "      <td>15</td>\n",
+       "      <td>SPX   240621C05305000</td>\n",
+       "      <td>2024-06-21</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5305.0</td>\n",
+       "      <td>2024-03-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1639250</th>\n",
+       "      <td>2024-03-28 20:38:02.001005213+00:00</td>\n",
+       "      <td>1174440576</td>\n",
+       "      <td>118.5</td>\n",
+       "      <td>120.00</td>\n",
+       "      <td>25</td>\n",
+       "      <td>15</td>\n",
+       "      <td>SPX   240621C05305000</td>\n",
+       "      <td>2024-06-21</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5305.0</td>\n",
+       "      <td>2024-03-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1639251</th>\n",
+       "      <td>2024-03-28 20:51:14.059720971+00:00</td>\n",
+       "      <td>1174424859</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>346</td>\n",
+       "      <td>888</td>\n",
+       "      <td>SPX   240419P04475000</td>\n",
+       "      <td>2024-04-19</td>\n",
+       "      <td>P</td>\n",
+       "      <td>4475.0</td>\n",
+       "      <td>2024-03-28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1639252 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    ts_recv  instrument_id  bid_px_00  \\\n",
+       "0       2024-01-02 14:30:02.402838204+00:00      587228771       27.0   \n",
+       "1       2024-01-02 14:30:02.402844171+00:00      587211744        1.6   \n",
+       "2       2024-01-02 14:30:02.402848382+00:00      587211728        4.1   \n",
+       "3       2024-01-02 14:30:02.410507796+00:00      587246038      121.1   \n",
+       "4       2024-01-02 14:30:02.410507796+00:00      587237433       42.7   \n",
+       "...                                     ...            ...        ...   \n",
+       "1639247 2024-03-28 20:37:30.943251679+00:00     1174421216      118.5   \n",
+       "1639248 2024-03-28 20:37:30.943337040+00:00     1174421216      118.5   \n",
+       "1639249 2024-03-28 20:37:31.631254111+00:00     1174440576      118.5   \n",
+       "1639250 2024-03-28 20:38:02.001005213+00:00     1174440576      118.5   \n",
+       "1639251 2024-03-28 20:51:14.059720971+00:00     1174424859        1.5   \n",
+       "\n",
+       "         ask_px_00  bid_sz_00  ask_sz_00                 symbol expiration  \\\n",
+       "0            27.70        174        155  SPX   240119P04700000 2024-01-19   \n",
+       "1             1.75        755       1981  SPX   240119P04300000 2024-01-19   \n",
+       "2             4.40       1566       1125  SPX   240119P04500000 2024-01-19   \n",
+       "3           123.70         15         15  SPX   240216P04850000 2024-02-16   \n",
+       "4            43.40         75        120  SPX   240216P04650000 2024-02-16   \n",
+       "...            ...        ...        ...                    ...        ...   \n",
+       "1639247     120.20         30         30  SPX   240621P05305000 2024-06-21   \n",
+       "1639248     120.20         30         30  SPX   240621P05305000 2024-06-21   \n",
+       "1639249     120.00         25         15  SPX   240621C05305000 2024-06-21   \n",
+       "1639250     120.00         25         15  SPX   240621C05305000 2024-06-21   \n",
+       "1639251       1.70        346        888  SPX   240419P04475000 2024-04-19   \n",
+       "\n",
+       "        option_type  strike_price        day  \n",
+       "0                 P        4700.0 2024-01-02  \n",
+       "1                 P        4300.0 2024-01-02  \n",
+       "2                 P        4500.0 2024-01-02  \n",
+       "3                 P        4850.0 2024-01-02  \n",
+       "4                 P        4650.0 2024-01-02  \n",
+       "...             ...           ...        ...  \n",
+       "1639247           P        5305.0 2024-03-28  \n",
+       "1639248           P        5305.0 2024-03-28  \n",
+       "1639249           C        5305.0 2024-03-28  \n",
+       "1639250           C        5305.0 2024-03-28  \n",
+       "1639251           P        4475.0 2024-03-28  \n",
+       "\n",
+       "[1639252 rows x 11 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ts_recv          datetime64[ns, UTC]\n",
+       "instrument_id                  int64\n",
+       "bid_px_00                    float64\n",
+       "ask_px_00                    float64\n",
+       "bid_sz_00                      int64\n",
+       "ask_sz_00                      int64\n",
+       "symbol                        object\n",
+       "expiration            datetime64[ns]\n",
+       "option_type                   object\n",
+       "strike_price                 float64\n",
+       "day                   datetime64[ns]\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "date         datetime64[ns]\n",
+       "open                float64\n",
+       "high                float64\n",
+       "low                 float64\n",
+       "close               float64\n",
+       "adj close           float64\n",
+       "volume                int64\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "from datetime import datetime\n",
     "from backtester import Backtester\n",
     "from example_strategy import Strategy\n",
-    "\n",
+    "import pandas as pd\n",
     "start = datetime(2024, 1, 1)\n",
     "end = datetime(2024, 3, 30)\n",
     "s = Strategy()\n",
-    "s.getOptions()\n",
-    "#b = Backtester(start, end, s)\n",
+    "options = s.getOptions()\n",
+    "underlying = s.getUnderlying()\n",
+    "display(options)\n",
+    "display(options.dtypes)\n",
     "\n",
-    "#b.calculate_pnl()"
+    "display(underlying.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = Backtester(start, end, s)\n",
+    "\n",
+    "b.calculate_pnl()"
    ]
   },
   {
