moved backtesting to next cell

--- a/run_backtester.ipynb
+++ b/run_backtester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,46 @@
       "2024-02-19 00:00:00 capital: 2366364.150000014 portfolio value: 97646316.55000004 total pnl: 100012680.70000006 open orders: 6\n",
       "2024-02-20 00:00:00 capital: 2366364.150000014 portfolio value: 97646316.55000004 total pnl: 100012680.70000006 open orders: 6\n",
       "2024-02-21 00:00:00 capital: 2366364.150000014 portfolio value: 97646316.55000004 total pnl: 100012680.70000006 open orders: 6\n",
-      "2024-02-22 00:00:00 capital: 2366364.150000014 portfolio value: 97646316.55000004 total pnl: 100012680.70000006 open orders: 6\n"
+      "2024-02-22 00:00:00 capital: 2366364.150000014 portfolio value: 97646316.55000004 total pnl: 100012680.70000006 open orders: 6\n",
+      "2024-02-23 00:00:00 capital: 2366364.150000014 portfolio value: 97646316.55000004 total pnl: 100012680.70000006 open orders: 6\n",
+      "2024-02-24 00:00:00 capital: 2366364.150000014 portfolio value: 97646316.55000004 total pnl: 100012680.70000006 open orders: 6\n",
+      "2024-02-25 00:00:00 capital: 2366364.150000014 portfolio value: 97646316.55000004 total pnl: 100012680.70000006 open orders: 6\n",
+      "2024-02-26 00:00:00 capital: 2366364.150000014 portfolio value: 97646316.55000004 total pnl: 100012680.70000006 open orders: 6\n",
+      "2024-02-27 00:00:00 capital: 2366364.150000014 portfolio value: 97646316.55000004 total pnl: 100012680.70000006 open orders: 6\n",
+      "2024-02-28 00:00:00 capital: 2366364.150000014 portfolio value: 97646316.55000004 total pnl: 100012680.70000006 open orders: 6\n",
+      "2024-02-29 00:00:00 capital: 2349074.350000014 portfolio value: 97663605.35000004 total pnl: 100012679.70000005 open orders: 6\n",
+      "2024-03-01 00:00:00 capital: 2344526.350000014 portfolio value: 97668152.85000004 total pnl: 100012679.20000005 open orders: 6\n",
+      "2024-03-02 00:00:00 capital: 2306016.050000014 portfolio value: 97706661.65000004 total pnl: 100012677.70000005 open orders: 6\n",
+      "2024-03-03 00:00:00 capital: 2306016.050000014 portfolio value: 97706661.65000004 total pnl: 100012677.70000005 open orders: 6\n",
+      "2024-03-04 00:00:00 capital: 2306016.050000014 portfolio value: 97706661.65000004 total pnl: 100012677.70000005 open orders: 6\n",
+      "2024-03-05 00:00:00 capital: 765506.4914062638 portfolio value: 99249819.70859379 total pnl: 100015326.20000005 open orders: 6\n",
+      "2024-03-06 00:00:00 capital: 745186.3914062638 portfolio value: 99270138.30859378 total pnl: 100015324.70000005 open orders: 6\n",
+      "2024-03-07 00:00:00 capital: 745186.3914062638 portfolio value: 99270138.30859378 total pnl: 100015324.70000005 open orders: 6\n",
+      "2024-03-08 00:00:00 capital: 732347.1914062639 portfolio value: 99282976.50859378 total pnl: 100015323.70000005 open orders: 6\n",
+      "2024-03-09 00:00:00 capital: 732347.1914062639 portfolio value: 99282976.50859378 total pnl: 100015323.70000005 open orders: 6\n",
+      "2024-03-10 00:00:00 capital: 732347.1914062639 portfolio value: 99282976.50859378 total pnl: 100015323.70000005 open orders: 6\n",
+      "2024-03-11 00:00:00 capital: 732347.1914062639 portfolio value: 99282976.50859378 total pnl: 100015323.70000005 open orders: 6\n",
+      "2024-03-12 00:00:00 capital: 731281.1914062639 portfolio value: 99284041.50859378 total pnl: 100015322.70000005 open orders: 6\n",
+      "2024-03-13 00:00:00 capital: 731281.1914062639 portfolio value: 99284041.50859378 total pnl: 100015322.70000005 open orders: 6\n",
+      "2024-03-14 00:00:00 capital: 707592.3914062638 portfolio value: 99307729.30859378 total pnl: 100015321.70000005 open orders: 6\n",
+      "2024-03-15 00:00:00 capital: 679305.0914062638 portfolio value: 99336014.60859379 total pnl: 100015319.70000006 open orders: 6\n",
+      "2024-03-16 00:00:00 capital: 679305.0914062638 portfolio value: 99336014.60859379 total pnl: 100015319.70000006 open orders: 5\n",
+      "2024-03-17 00:00:00 capital: 679305.0914062638 portfolio value: 99336014.60859379 total pnl: 100015319.70000006 open orders: 5\n",
+      "2024-03-18 00:00:00 capital: 679305.0914062638 portfolio value: 99336014.60859379 total pnl: 100015319.70000006 open orders: 5\n",
+      "2024-03-19 00:00:00 capital: 679305.0914062638 portfolio value: 99336014.60859379 total pnl: 100015319.70000006 open orders: 5\n",
+      "2024-03-20 00:00:00 capital: 674579.4914062638 portfolio value: 99340739.70859379 total pnl: 100015319.20000005 open orders: 6\n",
+      "2024-03-21 00:00:00 capital: 652791.1914062639 portfolio value: 99362527.00859378 total pnl: 100015318.20000005 open orders: 6\n",
+      "2024-03-22 00:00:00 capital: 652791.1914062639 portfolio value: 99362527.00859378 total pnl: 100015318.20000005 open orders: 6\n",
+      "2024-03-23 00:00:00 capital: 652791.1914062639 portfolio value: 99362527.00859378 total pnl: 100015318.20000005 open orders: 6\n",
+      "2024-03-24 00:00:00 capital: 652791.1914062639 portfolio value: 99362527.00859378 total pnl: 100015318.20000005 open orders: 6\n",
+      "2024-03-25 00:00:00 capital: 652791.1914062639 portfolio value: 99362527.00859378 total pnl: 100015318.20000005 open orders: 6\n",
+      "2024-03-26 00:00:00 capital: 652791.1914062639 portfolio value: 99362527.00859378 total pnl: 100015318.20000005 open orders: 6\n",
+      "2024-03-27 00:00:00 capital: 652791.1914062639 portfolio value: 99362527.00859378 total pnl: 100015318.20000005 open orders: 6\n",
+      "2024-03-28 00:00:00 capital: 650111.4914062639 portfolio value: 99365205.70859377 total pnl: 100015317.20000003 open orders: 6\n",
+      "2024-03-29 00:00:00 capital: 649578.9914062639 portfolio value: 99365737.70859377 total pnl: 100015316.70000003 open orders: 6\n",
+      "2024-03-30 00:00:00 capital: 649578.9914062639 portfolio value: 99365737.70859377 total pnl: 100015316.70000003 open orders: 6\n",
+      "2024-03-31 00:00:00 capital: 649578.9914062639 portfolio value: 99365737.70859377 total pnl: 100015316.70000003 open orders: 6\n",
+      "after closing open orders: final capital: -127661650.39335936 final portfolio value: 216012309.87656254 final pnl: 88350659.48320317\n"
      ]
     }
    ],
@@ -516,7 +555,15 @@
     "end = datetime(2024, 3, 30)\n",
     "s = Strategy()\n",
     "display(s.getOptions())\n",
-    "display(s.getUnderlying())\n",
+    "display(s.getUnderlying())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "b = Backtester(start, end, s)\n",
     "\n",
     "b.calculate_pnl()"
