--- a/run_backtester.ipynb
+++ b/run_backtester.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vincent v0.0.65\n",
-      "  Row: Pandas(Index=0, ts_recv='2024-01-02T14:30:02.402838204Z', instrument_id=587228771, bid_px_00=27.0, ask_px_00=27.7, bid_sz_00=174, ask_sz_00=155, symbol='SPX   240119P04700000', expiration=Timestamp('2024-01-19 00:00:00'), option_type='P', strike_price=4700.0, day='2024-01-02')\n",
-      "Order: {'datetime': '2024-01-02T14:30:02.402838204Z', 'option_symbol': 'SPX   240119P04700000', 'action': 'B', 'order_size': 1}\n",
-      "Order: {'datetime': '2024-01-02T14:30:02.402838204Z', 'option_symbol': 'SPX   240119P04700000', 'action': 'S', 'order_size': 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "from backtester import Backtester\n",
@@ -24,14 +13,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "options.day is datetime64[ns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Mikhail\\Documents\\code\\trading_comp\\CTC-2024-Derivatives\\example_strategy.py:38: FutureWarning: The default fill_method='pad' in Series.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
+      "  self.vol_daily = self.underlying_price_daily.pct_change().rolling(self.DAYS_TO_SKIP, min_periods = self.DAYS_TO_SKIP).std() * np.sqrt(252)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done with time to expiration\n",
+      "[0.06051601 0.06051601 0.06051601 ... 0.09493943 0.09493943 0.09493943]\n",
+      "AAAAAAAAAAAAAAAAA\n",
+      "float64 float64 float64 float64\n",
+      "[0.06051601 0.06051601 0.06051601 ... 0.09493943 0.09493943 0.09493943]\n",
+      "[1.9247091  0.00821355 0.00821355 ... 0.23271732 0.23271732 0.06023272]\n",
+      "BBBBBBBBBBBBBBBBBB\n"
+     ]
+    }
+   ],
    "source": [
     "start = datetime(2024, 1, 1)\n",
     "end = datetime(2024, 3, 30)\n",
     "s = Strategy(start, end)\n",
-    "b = Backtester(start, end, s)"
+    "# b = Backtester(start, end, s)"
    ]
   },
   {
@@ -100,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
